test/files/neg/macro-reify-groundtypetag-typeparams-notags.check
Test.scala:5: error: No ConcreteTypeTag available for T
    println(implicitly[ConcreteTypeTag[T]])
                      ^
Test.scala:6: error: No ConcreteTypeTag available for List[T]
    println(implicitly[ConcreteTypeTag[List[T]]])
                      ^
two errors found
